# correctness

./: AD.md  README.md
Data/GH200/: performance_results_.csv.bz2
Data/Mi250X/: performance_results_Mi250X.csv.bz2
Data/V100/: mapping_atomicInc_block_index_V100.csv.bz2  performance_results_.csv.bz2
Mathematica/: Plot_timings.nb  PlotsDistributions.nb
codes/reduction_tests/: CMakeLists.txt  README.md  mdarray.hpp  ornl_reduce.cu  prefix_sum.cpp  prefix_sum.cu  reduce.cu  reduce_test.cpp  utils.cu  utils.hpp
codes/reduction_tests/whip/cuda/: whip.hpp
codes/reduction_tests/whip/hip/: whip.hpp
codes/test-suite/: CC_Analysis.ipynb  ComparingTensors.ipynb  README.md  cc_test.py  operations_analysis.ipynb  output.txt  requirements.txt  scaffold.py  todo.md  train.py
codes/test-suite/.ipynb_checkpoints/: output-checkpoint.txt  scaffold-checkpoint.py
codes/test-suite/data/.ipynb_checkpoints/: Conv1d-checkpoint.csv  Conv2d-checkpoint.csv  ConvTranspose1d-checkpoint.csv  bmm-checkpoint.csv
codes/test-suite/kernels/: avg_pool.py  benchmark.py  conv.py  gather.py  index_add.py  index_copy.py  index_put.py  replication_pad.py  scatter.py  scatter_reduce.py  utils.py
codes/test-suite/paper-results/: generate_operation_figures.ipynb  scaffold.py
codes/test-suite/paper-results/data/: ConvTranspose2d_False.csv  ConvTranspose2d_True.csv  index_add_False.csv  index_add_True.csv  index_add_updated.csv  scatter_reduce_updated.csv  train.txt
codes/test-suite/tensor_data/: baseline.pt  output_0.pt  output_1.pt  output_2.pt  output_3.pt  output_4.pt  output_5.pt  output_6.pt  output_7.pt  output_8.pt  output_9.pt
